# cargo-create

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  README.md  filters.html  getting_started.html  index.html  introduction.html  print.html  resolvers.html  searchindex.js  searchindex.json  template_repositories.html  variables.html
.devcontainer/: README.md
.devcontainer/library-scripts/: rust-debian.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  filters.md  getting_started.md  introduction.md  resolvers.md  template_repositories.md  variables.md
src/: args.rs  cli.rs  git.rs  lib.rs  main.rs  output.rs
src/config/: mod.rs  template.rs  user.rs
src/filters/: text.rs
src/providers/: mod.rs
src/providers/author/: mod.rs
src/providers/author/email/: cargo.rs  env.rs  git.rs  mod.rs
src/providers/author/name/: cargo.rs  env.rs  git.rs  mod.rs
src/providers/misc/: datetime.rs  defaults.rs  mod.rs  system.rs
src/steps/: apply.rs  cleanup.rs  clone.rs  mod.rs  populate.rs
