[package]
name = "cargo-create"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
description = "A CLI for fast project generation based on Tera templates."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SirWindfield/cargo-create"
version = "0.2.0"
edition = "2018"

[[bin]]
name = "cargo-create"
path = "src/bin/cargo-create.rs"

[[bin]]
name = "jen"
path = "src/bin/jen.rs"

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
chrono = { version = "0.4.13", features = ["serde"] }
console = "0.11.3"
directories-next = "1.0.1"
git2 = "0.13.8"
indicatif = "0.15.0"
inventory = "0.1.7"
log = "0.4.11"
petgraph = { version = "0.5.1", default-features = false, features = ["graphmap"] }
serde = { version = "1.0.114", features = ["derive"] }
tera = "1.4.0"
toml = "0.5.6"
walkdir = "2.3.1"

[features]
default = ["colors"]
colors = []
