[package]
name = "cargo-create"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
description = "A CLI for fast project generation based on Tera templates."
documentation = "https://jen.zerotask.net"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SirWindfield/cargo-create"
version = "0.3.1"
edition = "2018"

[[bin]]
name = "cargo-create"
path = "src/bin/cargo-create.rs"

[[bin]]
name = "jen"
path = "src/bin/jen.rs"

[dependencies]
anyhow = "1.0.41"
clap = "3.0.0-beta.1"
chrono = { version = "0.4.19", features = ["serde"] }
console = "0.14.1"
directories-next = "2.0.0"
git2 = "0.13.12"
heck = "0.3.1"
indicatif = "0.15.0"
inventory = "0.1.10"
log = "0.4.14"
petgraph = { version = "0.5.1", default-features = false, features = ["graphmap"] }
serde = { version = "1.0.124", features = ["derive"] }
tera = "1.5.0"
tera-text-filters = "1.0.0"
toml = "0.5.8"
walkdir = "2.3.1"
git2_credentials = "0.6.1"

[features]
default = ["colors"]
colors = []
